# BasicallyLinux

./: .traerules  CMakeLists.txt  Makefile  README.md  build.ps1  linker.ld
.github/workflows/: ISO.yml  cmake.yml
LICENSE/: MIT
docs/: ai_architecture.md  architecture.md  debugging.md  device_subsystems.md  driver_interface.md  internals.md  kernel_dev_guide.md  memory_management.md  network_stack.md  process_management.md  security.md  userland_abi.md
docs/internals/: hardware_abstraction.md  memory_manager.md  network_stack.md  process_scheduler.md  security_subsystem.md  storage_vfs.md  syscall_interface.md  userland_init.md
include/: acpi_power.h  ai_model.h  apex_intc.h  bench.h  block.h  cpu.h  debug.h  devnodes.h  diag.h  dm.h  driver_grid.h  dyn_loader.h  elf_loader.h  fixedpoint.h  font.h  framebuffer.h  fs.h  fs_types.h  gdt.h  gfx_forge.h  gguf.h  heap.h  hw_detect.h  idt.h  init_orch.h  inode_cache.h  input_stream.h  interrupts.h  io_sched.h  ipc.h  ipc_futex.h  ipc_msg.h  ipc_pipe.h  ipc_shm.h  ipc_socket.h  job.h  journal.h  kernel.h  keyboard.h  kswapd.h  (+49 more)
include/ai/: ai_model.h
include/arch/x86/: cpu.h  gdt.h  idt.h  interrupts.h  mmu.h  multiboot.h  smp_rally.h  timer.h
include/cpu/: syscall.h
include/drivers/: input_stream.h  keyboard.h  pcie_portshift.h  serial.h  usb_nexus.h  vga.h
include/fs/: fs.h  fs_types.h  inode_cache.h
include/ipc/: ipc.h  ipc_futex.h  ipc_pipe.h  ipc_socket.h
include/kernel/: sched.h
include/mem/: heap.h  kswapd.h  slab.h  vm_space.h
include/net/: net_guard.h  net_ip.h  net_stack.h
include/power/: acpi_power.h  power_plane.h
include/storage/: dm.h  io_sched.h
include/sys/: proc_view.h  sys_config.h
include/task/: task.h
include/trace/: perf_meter.h  trace_forge.h
include/user/: elf_loader.h
include/video/: framebuffer.h
src/: bench.c  boot.asm  boot.s  debug.c  diag.c  kernel.c  ramdisk.c  selftest.c  usermode.c  util.c  vfs.c
src/ai/: ai_model.c
src/arch/: gdt.asm  gdt.c  pit.c  timer.c
src/arch/x86/: cpu.c  gdt.asm  gdt.c  hw_detect.c  idt.asm  idt.c  interrupts.c  isr.asm  mmu.c  pit.c  smp_rally.c  smp_trampoline.asm  switch.asm  timer.c
src/cpu/: apex_intc.c  idt.c  isr.asm  isr.c  isr.s  isr_handler.c  msgi.c  smp_rally.c  syscall.c
src/drivers/: driver_grid.c  gfx_forge.c  input_stream.c  keyboard.c  pcie_portshift.c  serial.c  usb_nexus.c  vga.c
src/fs/: btrfs.c  ext4.c  fs.c  inode_cache.c  journal.c  page_cache.c  xfs.c
src/ipc/: futex.c  ipc.c  msg.c  pipe.c  shm.c  socket.c
src/kernel/: job.c  sched.c  signal.c
src/mem/: heap.c  kswapd.c  numa.c  paging.c  pmm.c  slab.c  vm_space.c  vmm.c
src/net/: net_guard.c  net_ip.c  net_link.c  net_route.c  net_stack.c  net_transport.c
src/power/: acpi_power.c  power_plane.c
src/security/: secure_audit.c  secure_caps.c  secure_hard.c  secure_policy.c
src/shell/: shell.c
src/storage/: block.c  dm.c  io_sched.c
src/sys/: devnodes.c  proc_view.c  sys_config.c  sys_view.c
src/task/: switch.s  task.c
src/term/: pty_mux.c  tty_core.c
src/trace/: perf_meter.c  trace_forge.c
src/user/: dyn_loader.c  elf_loader.c  init_orch.c
src/vfs/: mount.c
src/video/: font.c  framebuffer.c
